
CMAKE_MINIMUM_REQUIRED( VERSION 2.8 ) 
PROJECT( rect ) 

SET( CMAKE_CXX_COMPILER "g++")
SET(CMAKE_BUILD_TYPE Debug)
	
#set bin directory
SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin) 


FIND_PACKAGE(OpenCV REQUIRED)

ADD_EXECUTABLE( backproj backproj.cpp )
TARGET_LINK_LIBRARIES( backproj
	${OpenCV_LIBS} ) 
